--- a/component/package.json
+++ b/component/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog",
+  "name": "component",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,11 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@popperjs/core": "^2.10.2",
-    "bootstrap": "^5.1.3",
-    "vue": "^3.2.16",
-    "vue-router": "^4.0.12",
-    "vuex": "^4.0.2"
+    "vue": "^3.2.16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
